crates/alien-permissions/tests/snapshots/aws_cloudformation__aws_cloudformation_policy_with_conditions.snap
---
source: crates/alien-permissions/tests/aws_cloudformation.rs
expression: result
---
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "WorkerExecuteLambdaInvokeWorker",
      "Effect": "Allow",
      "Action": [
        "lambda:InvokeWorker"
      ],
      "Resource": [
        {
          "Fn::Sub": "arn:${AWS::Partition}:lambda:${AWS::Region}:${AWS::AccountId}:function:${AWS::StackName}-*"
        }
      ]
    },
    {
      "Sid": "WorkerExecuteReadEcrImages",
      "Effect": "Allow",
      "Action": [
        "ecr:BatchGetImage",
        "ecr:GetDownloadUrlForLayer"
      ],
      "Resource": [
        {
          "Fn::Sub": "arn:${AWS::Partition}:ecr:*:${ManagingAccountId}:repository/*"
        }
      ],
      "Condition": {
        "StringEquals": {
          "sts:ExternalId": "my-external-id"
        }
      }
    }
  ]
}
