crates/alien-permissions/tests/snapshots/aws_cloudformation__aws_cloudformation_storage_data_read_resource_binding.snap
---
source: crates/alien-permissions/tests/aws_cloudformation.rs
expression: result
---
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Sid": "StorageDataRead",
      "Effect": "Allow",
      "Action": [
        "s3:GetObject",
        "s3:GetObjectVersion",
        "s3:ListBucket"
      ],
      "Resource": [
        {
          "Fn::Sub": "arn:${AWS::Partition}:s3:::PaymentsDataBucket"
        },
        {
          "Fn::Sub": "arn:${AWS::Partition}:s3:::PaymentsDataBucket/*"
        }
      ]
    }
  ]
}
